# cgame-engine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
src/: cod3rGL.h  interactions.c  interactions.cpp  interactions.h  main.c  main.cpp  utils.c  utils.h
src/shaders/: fragment.glsl  vertex.glsl
